Add some more test cases that handle concantenated json.  Use extractJsonSnippet function instead because it returns more information. New JsonValueAt type class. Change return type of firstChild, nestSibling, and parent functions to be Maybe k. Use kleisli composition

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -84,6 +84,7 @@ test-suite hw-json-test
   build-depends:        base
                       , attoparsec
                       , bytestring
+                      , containers
                       , conduit
                       , hspec
                       , hw-bits
