Prefix JsonValue type with Gen

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -54,6 +54,8 @@ library
                       , HaskellWorks.Data.Json.Token
                       , HaskellWorks.Data.Json.Type
                       , HaskellWorks.Data.Json.Value
+                      , HaskellWorks.Data.Json.Value.ByteString
+                      , HaskellWorks.Data.Json.Value.Internal
   build-depends:        base                            >= 4.7  && < 5
                       , array
                       , attoparsec
