Fix branching, versioning, publishing and badge

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -17,7 +17,7 @@ executable hw-json-example
   hs-source-dirs:       app
   main-is:              Main.hs
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
-  build-depends:        base            >= 4
+  build-depends:        base                          >= 4          && < 5
                       , bytestring
                       , conduit
                       , criterion
@@ -26,7 +26,7 @@ executable hw-json-example
                       , hw-conduit
                       , hw-diagnostics
                       , hw-json
-                      , hw-prim
+                      , hw-prim                       >= 0.0.1
                       , hw-rankselect
                       , mmap
                       , resourcet
@@ -55,7 +55,7 @@ library
                       , HaskellWorks.Data.Json.Value
                       , HaskellWorks.Data.Json.Value.ByteString
                       , HaskellWorks.Data.Json.Value.Internal
-  build-depends:        base                            >= 4.7  && < 5
+  build-depends:        base                          >= 4          && < 5
                       , array
                       , attoparsec
                       , bytestring
@@ -64,7 +64,7 @@ library
                       , hw-bits
                       , hw-conduit
                       , hw-parser
-                      , hw-prim
+                      , hw-prim                       >= 0.0.1
                       , hw-rankselect
                       , mono-traversable
                       , resourcet
@@ -82,7 +82,7 @@ test-suite hw-json-test
   other-modules:        HaskellWorks.Data.Json.Token.TokenizeSpec
                       , HaskellWorks.Data.Json.Succinct.CursorSpec
                       , HaskellWorks.Data.Json.Succinct.Cursor.InterestBitsSpec
-  build-depends:        base
+  build-depends:        base                          >= 4          && < 5
                       , attoparsec
                       , bytestring
                       , containers
@@ -91,7 +91,7 @@ test-suite hw-json-test
                       , hw-bits
                       , hw-conduit
                       , hw-json
-                      , hw-prim
+                      , hw-prim                       >= 0.0.1
                       , hw-rankselect
                       , mmap
                       , parsec
@@ -112,14 +112,14 @@ benchmark bench
     Main-Is: Main.hs
     GHC-Options: -O2 -Wall -msse4.2
     Default-Language: Haskell2010
-    Build-Depends:      base            >= 4       && < 5
+    Build-Depends:      base                          >= 4          && < 5
                       , bytestring
                       , conduit
                       , criterion
                       , hw-bits
                       , hw-conduit
                       , hw-json
-                      , hw-prim
+                      , hw-prim                       >= 0.0.1
                       , hw-rankselect
                       , mmap
                       , resourcet
