Require hw-rankselect 0.0.0.5.  Fix unit tests

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -27,7 +27,7 @@ executable hw-json-example
                       , hw-diagnostics
                       , hw-json
                       , hw-prim                       >= 0.0.3.1
-                      , hw-rankselect
+                      , hw-rankselect                 >= 0.0.0.5
                       , mmap
                       , resourcet
                       , vector
@@ -63,7 +63,7 @@ library
                       , hw-conduit
                       , hw-parser
                       , hw-prim                       >= 0.0.3.1
-                      , hw-rankselect
+                      , hw-rankselect                 >= 0.0.0.5
                       , mono-traversable
                       , resourcet
                       , text
@@ -71,7 +71,7 @@ library
                       , word8
 
   default-language:     Haskell2010
-  ghc-options:          -rtsopts -with-rtsopts=-N -Wall -O2 -Wall -msse4.2
+  ghc-options:          -Wall -O2 -msse4.2
 
 test-suite hw-json-test
   type:                 exitcode-stdio-1.0
@@ -90,7 +90,7 @@ test-suite hw-json-test
                       , hw-conduit
                       , hw-json
                       , hw-prim                       >= 0.0.3.1
-                      , hw-rankselect
+                      , hw-rankselect                 >= 0.0.0.5
                       , mmap
                       , parsec
                       , QuickCheck
@@ -118,7 +118,7 @@ benchmark bench
                       , hw-conduit
                       , hw-json
                       , hw-prim                       >= 0.0.3.1
-                      , hw-rankselect
+                      , hw-rankselect                 >= 0.0.0.5
                       , mmap
                       , resourcet
                       , vector
