--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -53,6 +53,7 @@ library
                       , HaskellWorks.Data.Json.Token
                       , HaskellWorks.Data.Json.Type
                       , HaskellWorks.Data.Json.Value
+                      , HaskellWorks.Data.Json.Value.Internal
   build-depends:        base                          >= 4          && < 5
                       , array
                       , attoparsec
@@ -80,6 +81,8 @@ test-suite hw-json-test
   other-modules:        HaskellWorks.Data.Json.Token.TokenizeSpec
                       , HaskellWorks.Data.Json.Succinct.CursorSpec
                       , HaskellWorks.Data.Json.Succinct.Cursor.InterestBitsSpec
+                      , HaskellWorks.Data.Json.TypeSpec
+                      , HaskellWorks.Data.Json.ValueSpec
   build-depends:        base                          >= 4          && < 5
                       , attoparsec
                       , bytestring
