Add 5000B.json, 5000B.bp and 5000Bib test files

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -10,7 +10,10 @@ maintainer:             newhoggy@gmail.com
 copyright:              2016 John Ky
 category:               Data, Conduit
 build-type:             Simple
-extra-source-files:     README.md
+extra-source-files:     README.md,
+                        corpus/5000B.bp,
+                        corpus/5000B.ib,
+                        corpus/5000B.json
 cabal-version:          >= 1.22
 
 executable hw-json-example
