--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -85,6 +85,7 @@ test-suite hw-json-test
   hs-source-dirs:       test
   main-is:              Spec.hs
   other-modules:        HaskellWorks.Data.Json.CorpusSpec
+                      , HaskellWorks.Data.Json.Succinct.Cursor.BalancedParensSpec
                       , HaskellWorks.Data.Json.Succinct.Cursor.InterestBitsSpec
                       , HaskellWorks.Data.Json.Succinct.CursorSpec
                       , HaskellWorks.Data.Json.Token.TokenizeSpec
