--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -66,6 +66,7 @@ library
                       , HaskellWorks.Data.Json.Value.Internal
   build-depends:        base                          >= 4          && < 5
                       , array
+                      , ansi-wl-pprint
                       , attoparsec
                       , bytestring
                       , conduit
