--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,14 @@
 dependencies:
   cache_directories:
+    - "~/.cabal"
     - "~/.stack"
   pre:
     - wget -qO- https://get.haskellstack.org/ | sh
     - cp ./scripts/* ~/bin/
   override:
-    - cabal update
     - fetch
-    - stack setup
-    - stack clean
     - stack init --resolver lts-7.2
-    - stack build
+    - stack build --only-dependencies
 
 test:
   override:
@@ -21,12 +19,10 @@ deployment:
     owner: haskell-works
     branch: /.*-branch/
     commands:
-      - nox when tag autotag
+      - when tag autotag
 
   hackage:
     owner: haskell-works
     tag: /v.*/
     commands:
-      - ./scripts/setup-cred
-      - stack sdist
-      - stack upload .
+      - ./publish
