--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,9 @@
 version: 2.0
 jobs:
   build:
-    working_directory: ~/hw-json
+    working_directory: ~/project
     docker:
-      - image: quay.io/haskell_works/stack-build-cabal:2017-12-27
+      - image: quay.io/haskell_works/stack-build-cabal:2018-01-29
 
     steps:
       - checkout
@@ -49,7 +49,7 @@ jobs:
       ##### Building library
       - restore_cache:
           keys:
-            - dot-stack-{{ checksum "stack.yaml" }}-{{ checksum "hw-json.cabal" }}
+            - dot-stack-{{ checksum "stack.yaml" }}-{{ checksum "package.yaml" }}
             - dot-stack-{{ checksum "stack.yaml" }}-build
             - dot-stack-{{ checksum "stack.yaml" }}-setup
 
@@ -71,10 +71,10 @@ jobs:
 
       - run:
           name: Compiling
-          command: stack --stack-yaml stack-ci.yaml build --test --no-run-tests
+          command: stack --stack-yaml stack-ci.yaml build --test --no-run-tests --bench --no-run-benchmarks
 
       - save_cache:
-          key: dot-stack-{{ checksum "stack.yaml" }}-{{ checksum "hw-json.cabal" }}
+          key: dot-stack-{{ checksum "stack.yaml" }}-{{ checksum "package.yaml" }}
           paths:
             - ~/.stack
       - save_cache:
@@ -84,7 +84,7 @@ jobs:
 
       - save_cache:
           key: dot-stack-work-{{ checksum "stack.yaml" }}
-          paths: ~/hw-json/.stack-work
+          paths: ~/project/.stack-work
 
       ##### Running tests
       - run:
