--- a/stack.yaml
+++ b/stack.yaml
@@ -1,24 +1,7 @@
-resolver: nightly-2018-07-11
+resolver: lts-12.0
 
 packages:
 - '.'
-
-extra-deps:
-  - bits-extra-0.0.1.3
-  - hedgehog-0.6
-  - hw-balancedparens-0.2.0.1
-  - hw-bits-0.7.0.2
-  - hw-conduit-0.2.0.3
-  - hw-diagnostics-0.0.0.5
-  - hw-excess-0.2.0.0
-  - hw-hspec-hedgehog-0.1.0.5
-  - hw-int-0.0.0.3
-  - hw-mquery-0.1.0.1
-  - hw-parser-0.0.0.3
-  - hw-prim-0.6.2.0
-  - hw-rankselect-0.12.0.3
-  - hw-rankselect-base-0.3.2.0
-  - hw-string-parse-0.0.0.4
 
 flags: {}
 
